[project]
name = "pac-man"
version = "0.1.0"
description = "Pac-man 42 project"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "pydantic>=2.13.4",
    "pygame>=2.6.1",
    "mazegenerator",
    "pygame-menu>=4.5.2",
]

[tool.uv.sources]
mazegenerator = { path = "mazegenerator-00001-py3-none-any.whl" }
